--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,21 @@
 
+body {
+    background-color: #A6ACCD;
+    padding: 10px 50px;
+}
+
+button {
+    padding: 2px;
+    background-color: #676E95;
+}
+
 .card {
     /* border-style: solid; */
     /* border-color: coral; */
     background-color: #292D3E;
     border-radius: 20px;
     padding: 0px 30px 0px 30px;
+    /* box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2); */
 }
 
 .container {
@@ -16,11 +27,6 @@
     column-gap: 50px; 
 }
 
-body {
-    background-color: #A6ACCD;
-    padding: 10px 50px;
-}
-
 .text {
     font-family: Arial, Helvetica, sans-serif;
     /* color: #eeffff; */
@@ -29,10 +35,6 @@ body {
     font-style: italic;
 }
 
-button {
-    padding: 2px;
-    background-color: #676E95;
-}
 
 /*------------------------------------------
 ------------ Title Card --------------------
@@ -155,10 +157,23 @@ button {
     border-style: solid; */
 }
 
-#temperature-title {
+/*#temperature-title {
     font-size: 25pt;
-    /* border-color: #c3e88d;
-    border-style: solid; */
+    border-color: #c3e88d;
+    border-style: solid;
+}*/
+
+.temp-button {
+    border: none;
+    background-color: transparent;
+}
+
+.temp-button:hover {
+    transform: scale(1.1);
+}
+
+.temp-button:active {
+    transform: translateY(2px);
 }
 
 #temperature-display {
@@ -167,6 +182,7 @@ button {
     font-size: 55pt;
     font-weight:bolder;
     font-style: normal;
+    color: #f78c6c;
 }
 
 /*------------------------------------------
@@ -181,11 +197,16 @@ button {
 #sky-selector {
     padding: 10px;
     border-radius: 10px;
+    border: none;
     width: 100%;
     background-color: #dcdff0;
     color: #292D3E;
     font-size: 14pt;
 }
+
+/* #sky-selector:hover{
+
+} */
 
 /*------------------------------------------
 ------------ Landscape Card ----------------
