--- a/styles/index.css
+++ b/styles/index.css
@@ -10,10 +10,10 @@ body#page {
     grid-template-rows: repeat(5, 1fr);
     grid-template-areas: 
         "header header header header"
-        "inputs cityScape cityScape cityScape"
-        "inputs cityScape cityScape cityScape"
-        "inputs cityScape cityScape cityScape"
-        "inputs cityScape cityScape cityScape";
+        "inputs landAndSky landAndSky landAndSky"
+        "inputs landAndSky landAndSky landAndSky"
+        "inputs landAndSky landAndSky landAndSky"
+        "inputs landAndSky landAndSky landAndSky";
     grid-gap: 20px;
 }
 
@@ -23,15 +23,17 @@ body#page {
     grid-area: header;
     background: #c8efed;
     border: 4px solid #ffffc2;
+    border-radius: 10px;
 }
 
-#page > .cityScape {
-    grid-area: cityScape;
+#page > .landAndSky {
+    grid-area: landAndSky;
     background: #c8e7ed;
     border: 4px solid #ffffc2;
     display: grid;
     grid-template-columns: 2fr;
     grid-template-rows: 1fr 1fr;
+    border-radius: 10px;
 }
 
 #page > #inputs {
@@ -43,6 +45,7 @@ body#page {
     justify-items: center;
     background: #c8efed;
     border: 4px solid #ffffc2;
+    border-radius: 10px;
 }
 
 .inputCityBlock{
@@ -51,6 +54,7 @@ body#page {
     grid-area: inputCityBlock;
     background: #c8efed;
     border: 4px solid #ffffc2;
+    border-radius: 10px;
 }
 
 .skyBlock{
@@ -59,6 +63,7 @@ body#page {
     grid-area: skyBlock;
     background: #c8efed;
     border: 4px solid #ffffc2;
+    border-radius: 10px;
 }
 
 .tempBlock {
@@ -66,4 +71,27 @@ body#page {
     justify-items: center;
     background: #c8efed;
     border: 4px solid #ffffc2;
+    border-radius: 10px;
+}
+
+select {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    outline: 0;
+    background: #ffffc2;
+    color: #2cb978;
+    border: 1px solid #8ca3e6;
+    padding: 4px;
+    border-radius: 10px;
+}
+
+button {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    outline: 0;
+    background: #ffffc2;
+    color: #2cb978;
+    border: 1px solid #8ca3e6;
+    padding: 4px;
+    border-radius: 10px;
 }
