adds conditional to increaseTemperature and decreaseTemperature functions to change the color of temperature accordingly and also to pick landscape emoji accordingly

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,14 @@
+body {
+    background-color: blue;
+}
+
+
 .container > div {
     background: #eee;
     padding: 1em;
     border-radius: 10px;
 }
+
 
 .container > div:nth-child(odd) {
     background: #ddd;
@@ -54,4 +60,20 @@
 
 .teal {
     color: teal;
+}
+
+.green {
+    color:green;
+}
+
+.yellow {
+    color: yellow;
+}
+
+.orange {
+    color: orange;
+}
+
+.red {
+    color:red;
 }
