--- a/styles/index.css
+++ b/styles/index.css
@@ -20,6 +20,7 @@
     grid-row: 1 / 3;
     text-align: center;
     font-size: 10vh;
+    text-shadow: .2vh .2vh black;
 }
 
 #temp-display-small {
