--- a/styles/index.css
+++ b/styles/index.css
@@ -4,9 +4,9 @@ body {
 }
 
 div {
-    width: 100px;
+    width: 400px;
     height: 100px;
-}
+} 
 
 .temperature {
     border: black solid 2px;
@@ -16,6 +16,9 @@ div {
     width: 100%;
     height: 300px;
     border: black solid 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .bottomHalf {
@@ -27,9 +30,12 @@ div {
 }
 
 .bottomHalf > section {
-    border: green solid 3px;
+    border: black solid 3px;
     color: black;
-    background-color: yellow;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .tempTitle {
