--- a/styles/index.css
+++ b/styles/index.css
@@ -65,24 +65,59 @@ body{
     height: 500px; 
     border: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-content: center;
+    margin-top: auto;
     
 }
 
 .gardenContainer
 {
     width: 480px;
-    height: 270px;
-    align-self:center;
+    height: 265px;
+    align-self:center; 
     margin-left: 40%;
-    margin-right: auto;
+    margin-right: auto;  
     border: 10px solid black;
     background-color: white;
-    background-image: url(/upintheclouds.webp);
+    
+    margin-top: 10%;
     
 }
+
+.cloudy{
+
+    background-image: url(/upintheclouds.webp) ;
+}
+.rainy{
+
+    background-image: url(/rihaan.gif);
+}
+.sunny{
+
+    background-image: url(/BeyFireYellow.gif);
+}
+.snowy{
+
+    background-image: url(/diamondhands.webp);
+    background-repeat: round;
+    
+}
+.landscape{
+
+    width: 480px;
+    height: 70px;
+    align-self: flex-end;
+    /* display: block; */
+    align-self:center;
+    margin-left: 30%;
+    
+
+}
+
+
+
 
 .skyDropMenu{
 
@@ -110,6 +145,7 @@ body{
     align-self: flex-end;
     color:plum;
     margin-left: 0.2cm;
+    
 }
 
 .gardenText{
