--- a/styles/index.css
+++ b/styles/index.css
@@ -54,8 +54,8 @@ body > section > h1 {
 
 .choice-box {
     background-color: white;
-    height: 200px;
-    width: 200px;
+    height: 90px;
+    width: 150px;
     border-radius: 100%;
     display: flex;
     justify-content: center;
@@ -122,6 +122,9 @@ input {
     }
     #choice-box-container {
         flex-direction: column;
+    }
+    .choice-box {
+        height: 150px;
     }
 }
 
