--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 body {
     background-color:cornflowerblue;
+    padding-left: 20px;
 }
 
 .box-block {
@@ -7,7 +8,7 @@ body {
     padding-top: 100px;
     width:50%; 
     display:grid;
-    grid-template-columns: 20% 25% 55%;
+    grid-template-columns: 30% 35% 45%;
     grid-template-rows:30% 10% 30% auto;
     grid-gap:10px;
 }
@@ -18,9 +19,11 @@ body {
     background-color: aliceblue;
     text-align: center;
     align-self: start;
-    
-    
+        
 }
+
+
+
 #gardenContainer {
     grid-column: span 3;
     background-color:azure;
@@ -29,15 +32,11 @@ body {
 #weather{
     grid-column: span 3;
     background-color:cornflowerblue;
+    font-size:1.5em;
     text-align: center;
 
 }
 
-
-/* button{
-    display: block;
-
-} */
 em {
     font-size: 0.6em;
 }
@@ -65,8 +64,8 @@ em {
     
 }
 #lovelyCity{
-  color:green; 
-  font-size: 1em; 
+    color:green; 
+    font-size: 1em; 
 }
 
 
