--- a/styles/index.css
+++ b/styles/index.css
@@ -31,16 +31,19 @@
   .title {
     font-family: 'Cinzel Decorative', cursive;
     color: white;
+    font-size: 2.1em;
   }
 
   #subtitle {
     font-family: 'Goudy Bookletter 1911', serif;
-    color: rgb(55, 46, 46)
+    color: rgb(55, 46, 46);
+    font-size: 1.5em;
   }
 
   .item-titles {
     font-family: 'Galada', cursive;
     color:rgb(85, 71, 71);
+    font-size: 1.7em;
   }
 
   header {
@@ -73,6 +76,7 @@
   .button-wrapper {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
   }
 
   .items-wrapper {
@@ -103,10 +107,17 @@
 
   #skyEmojis {
     margin-bottom: 40px;
+    font-size: 1.5em;
   }
 
   #landscape {
     margin-top: 10px;
+    font-size: 1.5em;
+  }
+
+  #temperatureDegree {
+    font-size: 2em;
+    margin-bottom: 0 auto;
   }
 
 
