--- a/styles/index.css
+++ b/styles/index.css
@@ -43,11 +43,12 @@ footer {
 .parent-side-container{
     width: 30%;
     align-items:center;
-    margin-top: 5%;
+    margin-top: 0%;
     margin-bottom:5%;
     margin-left: 10%;
     display: grid;
-    width: 100%;
+    width: 80%;
+	height: 50%;
     grid-template-columns: 0.6fr 1fr 0.8fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 1px;
@@ -58,7 +59,7 @@ footer {
 .sky-side-container,
 .city-side-container{
     background-color:#748cab ;
-    width: 80%;
+    width: 100%;
     height: 80%;
     padding: 5%;
     grid-column:1/1;
@@ -99,8 +100,6 @@ footer {
 }
 
 
-
-
 form button[type="button"]{
     background-color: #f0ebd8; 
     font-size: 80%;
@@ -134,10 +133,12 @@ form label,span{
 
 
 .container-garden{
+	align-self: center;
     grid-column-start:2;
     grid-column-end:3;
     grid-row-start: 1;
     grid-row-end: 3;
+	margin-top:40%;
     margin-left: 10%;
     border-radius: 15px;;
     height: 90%;
@@ -145,17 +146,20 @@ form label,span{
 }
 
 .container-garden h2{
+	margin-left:30%;
+	margin-bottom: 10%;
     text-align: center;
 }
 .container-garden div{
-    /* background-color:#f0ebd8; */
-    /* border-radius: 15px; */
+
     height: 90%;
 }
 
 
 .inner-grid-garden{
     display: grid;
+	margin-left: 10%;
+	width: 110%;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
 }
@@ -237,7 +241,6 @@ form label,span{
 	left: 20%; 
 	top: 30px;
 }
-
 
 
 
