--- a/styles/index.css
+++ b/styles/index.css
@@ -210,7 +210,7 @@ form label,span{
 /* SUNNY */
 .sunny { 
 	animation: sunny 15s linear infinite;
-	background: linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 100%);  
+	background: linear-gradient(to top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 100%);  
     height: 50px;
 	width: 60px; 
     position: sticky;
@@ -221,7 +221,7 @@ form label,span{
 
 }
 .sunny:before {
-	background: linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 100%);
+	background: linear-gradient(to top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 100%);
 	content: ''; 
 	height: 140px; 
 	width: 20px;
@@ -386,7 +386,7 @@ form label,span{
 			#000 40px 100px,
 			#000 50px 60px,
 			rgba(0,0,0,0) 55px 35px,
-            rgb(206, 178, 200)s80px 70px,
+            rgb(206, 178, 200)80px 70px,
 			rgba(0,0,0,0) 110px 25px,
 			rgba(0,0,0,0) 90px 15px;
 	}
