--- a/styles/index.css
+++ b/styles/index.css
@@ -1,32 +1,83 @@
-/* #temp-box {
-    background-color: blueviolet;
-    font-size: 80pt;
-} */
+body {
+    background-image: url('https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: 'Ruda';
+}
 
 h1 {
+    margin-top: 5%;
     font-size: 100pt;
-}
-div {
-    /* background-color: blueviolet; */
-    font-size: 80pt;
+    text-align: center;
 }
 
+div {
+    text-align: center;
+}
+
+#temp-box {
+    font-size: 80pt;
+    margin-top: 15mm;
+}
+
+#pretty-picture {
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+    background-color:rgb(178, 185, 254);
+    font-size: 50pt;
+    border-radius: 25px;
+    border: 10px double #ffffffe2;
+}
+
+button {
+    border-radius: 15px;
+    font-size: 20pt;
+    background-color: cornsilk;
+    padding: 10pt;
+}
+
+#select-bar {
+    font-size: 20pt;
+    position: relative;
+    margin-bottom: 15pt;
+}
+
+input {
+    font-size: 20pt;
+    padding: 8pt;
+}
+
+#temp-buttons {
+    position: relative;
+    margin-bottom: 15pt;
+}
+
+
+
+/* Temperature range colors */
+
 .eighty-degrees {
-    background-color: red;
+    color: red;
 }
 
 .seventy-degrees {
-    background-color: orange;
+    color: rgb(255, 132, 0);
 }
 
 .sixty-degrees {
-    background-color: yellow;
+    color: rgb(255, 247, 0);
 }
 
 .fifty-degrees {
-    background-color: green;
+    color: green;
 }
 
 .forty-degrees {
-    background-color: teal;
+    color: teal;
 }
+
+
+
