--- a/styles/index.css
+++ b/styles/index.css
@@ -4,15 +4,15 @@ body {
 
 
 .container > section {
-    background: #eee;
+    /* background: #eee; */
     padding: 1em;
     border-radius: 10px;
 }
 
 
-.container > div:nth-child(odd) {
+/* .container > div:nth-child(odd) {
     background: #ddd;
-}
+} */
 
 .container {
     display: grid;
@@ -25,9 +25,18 @@ body {
     
 }
 
-/* .box1{
-    grid-row: 2/4;
-} */
+#box1 {
+    font-size: 20px;
+    grid-column: 1/3;
+
+}
+
+#box1 {
+    /* background-color: green; */
+    color: white;
+    font-family:cursive;
+}
+
 /* .box2{
     grid-row: 2/4;
 } */
@@ -35,25 +44,29 @@ body {
 #box3{
     grid-row: 2;
     gap: 8em;
+    background-color: papayawhip;
 }
 
 #box4{
     grid-row: 3;
+    background-color: papayawhip;
 }
 
 #box5{
     grid-row: 4;
+    background-color: papayawhip;
 }
 
 #box6{
     grid-row: 2/4;
     margin-top: 100px;
     height:100px;
+    background-color: papayawhip;
 }
 
-.input-boxes {
-    background-color: aqua;
-}
+/* .input-boxes {
+    /* background-color: aqua; */
+} */
 
 
 /* TEMPERATURE */
