--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,11 @@
 body {
     display: grid;
     grid-template: 1fr 1fr 1fr 1fr / 3fr .25fr 3fr;
-    background: rgb(204, 204, 204);
+    background: url(images/rainbow_background.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     margin: 25px 25px 25px 25px;
 }
 
@@ -16,6 +20,18 @@ header {
     grid-row: 3/ span 1; 
     grid-column: 1/ span 1;
     padding-left: 15px;
+}
+
+.temperature button {
+    margin-right: 5pt;
+    font-size: 15pt;
+    font-weight: bolder;
+}
+
+#temp-number {
+    font-size: 25pt;
+    font-weight: bold;
+    margin-top: 10pt;
 }
 
 .sky {
@@ -34,7 +50,7 @@ header {
 
 .weather-display {
     background: rgb(255, 255, 255, 70%);
-    grid-column: 3/ span 1; 
+    grid-area: 2/ 3/ span end/ span 1;
     text-align: center;
 }
 
@@ -42,14 +58,18 @@ header {
     background: rgb(69, 69, 255, 40%);
     margin: 10px 25px 10px 25px;
     font-size: 4vh;
+
 }
 
 #sky-garden {
     grid-area: 3/ 3/ span 1/ span 1;
+    margin-bottom: 150px;
+    padding-top: 15px
 }
 
 #landscape-garden {
     grid-area: 4/ 3/ span 1/ span 1;
+    padding-bottom: 15px;
 }
 
 .red {
@@ -61,7 +81,7 @@ header {
 }
 
 .yellow { 
-    color: yellow;
+    color: rgb(253, 218, 13)
 }
 
 .aqua {
