--- a/styles/index.css
+++ b/styles/index.css
@@ -26,10 +26,46 @@ cursor:pointer;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    margin-top : 30px;
+
+}
+#whole-body {
+    display: flex;
+    flex-wrap: column;
+    flex-direction: row;
+    justify-content: space-evenly; 
+}
+
+#landscape{
+    width: 30vw;
+    height: 30vh;
+    /* border:violet 2px solid; */
+    margin-top: 100px;;
+    padding: 20px;
+}
+#weather-garden-title{
+  
+   color: white; 
+}
+
+#emojis-container{
+border-radius: 10px;
+border: 1px solid beige;
+/* border:hidden; */
 
 }
 
+p {
+    color: white;
+}
+#sky-emoji{
+padding: 20px;
+margin-bottom: 40px;
+}
+#plant-emoji{
+padding:20px;
+}
 #three-boxes {
     display : flex;
     flex-direction: column;
@@ -40,9 +76,6 @@ cursor:pointer;
     justify-items: center;
     margin-top: 50px;
     margin-left: 10px;
-    
-
-
 }
 
 #temp, #sky, #city-name {
@@ -86,16 +119,35 @@ cursor:pointer;
 .red {
     color: red;
 }
-.orange {
+.orange, .special {
     color:orange;
 }
 .yellow {
-    color:yellow;
+    color:#F4D10A;
 }
 .green {
     color: green;
 }
 .teal {
-    color: teal;
+    color: #256D6C;
 }
+.sunny-color {
+   background-color: #D6FFFF;
+}
+.cloudy-color{
+    background-color: #C9C9C9;
+}
+.rainy-color {
+   background-color:  #9FCFE0;
+}
+.snowy-color {
+   background-color: #A1B6D6;
+}
+.footer {
+    position:fixed;
+    margin-bottom:0;
+    margin-right:0;
+}
+
+
 
