--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blue;
+    background-color:#003b46;
 }
 
 
@@ -16,7 +16,7 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
     /* grid-auto-rows: minmax(100px, auto); */
     
     column-gap: 4em;
@@ -28,46 +28,65 @@ body {
 #box1 {
     font-size: 20px;
     grid-column: 1/3;
-
-}
-
-#box1 {
-    /* background-color: green; */
     color: white;
     font-family:cursive;
+
 }
+
+
 
 /* .box2{
     grid-row: 2/4;
 } */
 
-#box3{
+.box3{
     grid-row: 2;
     gap: 8em;
-    background-color: darkblue;
+    background-color: #c4dfe6;
+    display: flex;
+    flex-direction: row;
+ 
 }
+
+#temperature {
+    font-size: 25px;
+    text-align: center;
+    /* background-color: pink; */
+    /* color: red; */
+}
+
+/* #box3 > section {
+    text-align: right;
+    display: inline;
+} */
 
 #box4{
     grid-row: 3;
-    background-color: papayawhip;
+    background-color: #c4dfe6;
 }
 
 #box5{
     grid-row: 4;
-    background-color: papayawhip;
+    background-color: #c4dfe6;
 }
 
 #box6{
-    grid-row: 2/4;
-    grid-column: 2/4;
+    grid-row: 2/4; 
+    grid-column: 2/3;
     margin-top: 100px;
-    height:100px;
-    background-color: papayawhip;
+    margin-left: 50px;
+    height: 220px;
+    background-color: #c4dfe6;
+    text-align: center;
+    flex-wrap: wrap;
+    
+    
+    
 }
 
 /* .input-boxes {
     /* background-color: aqua; */
-} */
+/* } */ */
 
 
 /* TEMPERATURE */
