--- a/styles/index.css
+++ b/styles/index.css
@@ -1,57 +1,89 @@
-* {
-    background-color: grey;
-}
 main {
+    /* background-color: thistle; */
+    background-image: url(/assets/stars.png);
     color: rgb(10, 10, 10);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: grid; 
     grid-template-columns: 1fr 3fr; 
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 1fr 3fr;
     gap: 10px;
-    padding: 10px;
-    width: 100vw;
+    padding: 30px;
 }
 
 header {
     grid-column: auto / span 2; 
-    text-align: center;
+    text-align: left;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
-}
-
-aside {
-    background:peru;
-    display: flexbox; 
+    font-size: 40px;
+    padding: 10px;
 }
 
 .box {
     background-color:cornflowerblue;
-    border-color:black;
-    margin: 10px;
-    padding: 10px;
+    margin: 7px;
+    padding: 20px;
+    text-align: center;
+    border-radius: 12px;
+    border-color:rgb(233, 233, 238);
 }
 #closet {
-    background-color:cornflowerblue;
-    border-color:black;
-    margin: 70px;
-    padding: 20px;
+    background-color:rgb(90, 125, 190);
+    border-color:rgb(233, 233, 238);
+    border-radius: 12px;
+    padding: 60px;
     text-align: center;
 }
 
-#temperature {
-    background-color: antiquewhite;
-}; 
+#emojisky {
+    font-size: 30px;
+}
 
+#emojicloset {
+    text-align: center;
+    position: absolute;
+    top: 330px;
+    right: 430px;
+    font-size: 100px;
+}
+#displayCity {
+    position: absolute;
+    top: 100px;
+    right: 700px;
+    font-size: 20px;
+}
+
+#base-temp {
+    color:turquoise;
+}
+
+/* Change in background */
+#winter {
+    background-image: url(/assets/snow.jpeg);
+}
+#fall {
+    background-image: url();
+}
+#spring {
+    background-image: url(/assets/rain.png);
+}
+#summer {
+    background-image: url(/assets/sun.jpeg);
+}
 
 
 /* <main> css grid: display grid. any child of this elemnt will be a grid item */
     /*background: add changing background. Goes inside the body*/
-/* 
-.itsHot {
 
+#itsHot {
+    color:rgb(247, 243, 243);
+    background-color:rgb(233, 15, 15);
+    border-radius: 12px;
 }
 
-.itsCold {
+#itsCold {
+    color:rgb(242, 245, 247);
+    background-color:rgb(90, 125, 190);
+    border-radius: 12px;
 
 }
 
@@ -75,27 +107,4 @@ aside {
 
 } */ 
 
-/* .elclima {
-    
-
-}*/
-
-/* .closet { not connecting. doesnt change anything in the screen
-    display: flex;
-    justify-content: flex-end;
-    width: 320px;
-    padding: 10px;
-    border: 5px solid gray;
-    margin: 0;
-    font-size:10px;
-    
-}; */
-
-/* .city {
-    
-}
-
-.dog {
-    
-} */
 
