--- a/styles/index.css
+++ b/styles/index.css
@@ -9,8 +9,8 @@ header, #weather_body, #change_temp, #change_sky, #change_city{
 
 #city_name_header {
     display: flex;
-    justify-content: space-between;
-    margin: 50px 475px;
+    justify-content: center;
+    margin: 50px 575px;
     border-radius: 50px;
     padding: 0px 15px;
     font-size: smaller;
