--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 #layout {
-    width: 800px;
-    height: 600px;
+    width: 100vw;
+    height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
@@ -14,9 +14,10 @@
 }
 
 #city-title {
-    grid-column: 3/ 4;
+    grid-column: 3/ 5;
     grid-row: 1 / 2;
     text-align: center;
+    padding-top: 9px;
 }
 
 #city {
@@ -30,25 +31,25 @@
 }
 #temp-box {
     grid-column: 1 / 3;
-    grid-row: 3 / 4;
+    grid-row: 2 / 3;
     text-align: center;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content:start;
     align-items: center;
-    padding-left: 50px;
+    padding-left: 15%;
 }
 
 #art {
     grid-column: 2 / 5;
-    grid-row: 3 / 4;
+    grid-row: 2 / 4;
     text-align: center;
     font-size: 30px;
 }
 
 #sky-selector {
     grid-column: 1 / 2;
-    grid-row: 4 / 5;
+    grid-row: 3 / 4;
     text-align: center;
 }
