adds sort of working live view

--- a/styles/index.css
+++ b/styles/index.css
@@ -84,3 +84,11 @@ body{
 #viewLiveButton{
     margin: 10px;
 }
+
+#live{
+    visibility: hidden;
+}
+
+#viewLiveButton{
+    visibility: visible;
+}
