--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,14 @@
+
 main {
-    /* background-color: thistle; */
-    background-image: url(/assets/stars.png);
-    color: rgb(10, 10, 10);
+    color:rgb(212, 178, 212);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: grid; 
     grid-template-columns: 1fr 3fr; 
     grid-template-rows: 1fr 3fr;
     gap: 10px;
     padding: 30px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(230, 23, 195);
 }
 
 header {
@@ -16,15 +17,18 @@ header {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 40px;
     padding: 10px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(230, 23, 195);
 }
-
 .box {
-    background-color:cornflowerblue;
+    background-color:rgb(76, 123, 211);
     margin: 7px;
     padding: 20px;
     text-align: center;
     border-radius: 12px;
     border-color:rgb(233, 233, 238);
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(235, 96, 179);
 }
 #closet {
     background-color:rgb(90, 125, 190);
@@ -34,77 +38,69 @@ header {
     text-align: center;
 }
 
-#emojisky {
-    font-size: 30px;
+#emojiSky {
+    font-size: 50px;
 }
 
 #emojicloset {
     text-align: center;
     position: absolute;
-    top: 330px;
+    top: 400px;
     right: 430px;
-    font-size: 100px;
+    font-size: 80px;
 }
-#displayCity {
+#display-city  {
     position: absolute;
     top: 100px;
     right: 700px;
     font-size: 20px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(230, 23, 195);
 }
-
+/*Temperature display */
 #base-temp {
-    color:turquoise;
+    font-size: 30px;
 }
-
-/* Change in background */
-#winter {
-    background-image: url(/assets/snow.jpeg);
+.fifties {
+    color: green;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(42, 100, 56);
 }
-#fall {
-    background-image: url();
+.sixties {
+    color: yellow;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(178, 199, 83);
 }
-#spring {
-    background-image: url(/assets/rain.png);
+.seventies {
+    color: peru;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(230, 23, 195);
 }
-#summer {
-    background-image: url(/assets/sun.jpeg);
+.eighties {
+    color:red;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(14, 11, 11);
 }
-
 
 /* <main> css grid: display grid. any child of this elemnt will be a grid item */
-    /*background: add changing background. Goes inside the body*/
 
 #itsHot {
     color:rgb(247, 243, 243);
     background-color:rgb(233, 15, 15);
     border-radius: 12px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(221, 216, 219);
 }
 
 #itsCold {
     color:rgb(242, 245, 247);
     background-color:rgb(90, 125, 190);
-    border-radius: 12px;
-
+    border-radius: 10px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(221, 216, 219);
 }
-
-/* class for each background image in js: element.classList.add and element.classList.remove. debug console.log  */
-/* .rain {
-
+#reset {
+    border-radius: 25px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(8, 8, 8);
 }
-
-.snow {
-
-}
-
-.sun {
-
-}
-
-.wind {
-
-}
-.cloud {
-
-} */ 
-
-
