--- a/styles/index.css
+++ b/styles/index.css
@@ -1,95 +1,171 @@
-body {
-  background-color:  #ffc2cc;
+
+
+
+body{
+  background-color: #ffe7e7;
 }
-
-
-.header {
-  
+h1{
+  font-family: Snell Roundhand, cursive;
+  font-size: 40px;
+}
+h1, h2 {
   text-align: center;
-  background: #a6e5fa;
-  color: white;
-  font-size: 20px;
-  font-family: "Lucida Handwriting", "Courier New";
-  padding: 50px;
-}
-.header, .pickerWindow{
-  background: #a6e5fa;
-  border: 5px solid white;
-  padding: 0px;
-
-
-}
-.pickerWindow {
-  box-sizing: border-box;
-  border: 5px solid white;
-  width: 200px;
-  height: 150px;
-  border: 5px solid white;
-  float: left;
-  color: white;
-  font-size: 16px;
-  
-}
-#temp {
-  float: right;
-  font-size: 25px;
-}
-
-
-.Landscape {
-  
-  position: absolute;
-  bottom: 100px;
-  text-align: center;
-  background: #a6e5fa;
-  color: white;
-  font-size: 25px;
-  font-family: "Lucida Handwriting", "Courier New";
-  padding: 20px;
-  box-sizing: border-box;
-  border: 5px solid white;
-  width: 900px;
-  height: 450px;
-  padding: 50px;
-
-}
-
-.bubble_gum {
+  font-weight: bold;
   color: pink;
-}
-.red {
-  color: rgb(248, 124, 144);
-}
-
-.fuscia {
-  color: rgb(255, 0, 221);
-}
-
-.light_purple_pink {
-  color:rgb(246, 179, 246);
+  background: hsla(0, 27%, 94%, 0.308);;
+  backdrop-filter: blur(30px);
+  border: hidden;
+  border-radius: 10px;
+  width:300px;
+  padding: 10px;   
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
-.yellowgreen {
-  color: yellowgreen;
+.round {
+  border: hidden;
+  border-radius: 10px;
+  padding: 10px;   
 }
 
-.summer {
-  color: lightblue;
-}
-.hurricane {
-  background-color: lightgrey;
+/* 
+CITY 
+*/
+
+.frosted {
+  background: rgba(243, 234, 234, 0.308);;
+  backdrop-filter: blur(30px);
 }
 
-.spring {
-  background-color: rgb(221, 255, 255);
+#city-container {
+  display: flex;
+  margin: 10px auto;
+  width: 30vw;
 }
 
-.pink {
-  background-color: rgb(251, 163, 178);
+#city-name-container {
+  margin: auto;
+  background: white;
+  border-radius: 10px;
+  padding: 10px;
 }
 
-.cats {
+#city-name {
+  text-align: center;
+  background: transparent;
+  color: black;
+  border: hidden;
+}
+
+#reset-city-button {
+  border: hidden;
+  border-radius: var(--curved-rad);
+  padding: var(--curved-padding);
+  
+}
+
+
+/*
+LANDSCAPE
+*/
+
+#playground {
+  display: flex;
+  padding: 10vh;
+  height: 350px;
+  position:relative;
+  
+}
+
+#sky-container {
+  flex: 20;
+  
+}
+
+#landscape {
+  flex: 80;  
+  display: flex;
+  justify-content: center;
+  border:2px solid white;
+}
+
+#landscape-text {
+  
+  font-size: 50px;
+  letter-spacing: 4px;
+  align-self: flex-end;
+}
+
+
+/* 
+SKY BOX
+*/
+
+#sky-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin-right: 10px;
+  
+} 
+
+.sky-color {
+  flex: 1;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  
+   /* // hover behavior
+ */
+}
+
+.Fall-But-Make-It-Pink {
+  background-image: url(https://i.gifer.com/5onc.gif);
+  
+}
+
+.Winter {
+  background-image: url(https://i.gifer.com/NyDe.gif);
+  
+}
+
+.Summer {
+  
+  background-image: url(https://static.wixstatic.com/media/368ecd_2a086de90a93499bbfb6f495080b642c~mv2.gif);
+  
+}
+
+.Spring {
+  
+  background: rgb(255, 223, 228);
+  background-image: url(https://i.pinimg.com/originals/62/cb/bf/62cbbf3021778f2f6db1320a261fb88b.gif)
+}
+
+
+/* 
+WEATHER CONTROL
+*/
+#temp-container {
+  display: flex;
+  margin: 0 auto;
+  width: 30vw;
+  justify-content: space-evenly;
+}
+
+.temp-gauge {
+  background: transparent;
+}
+
+#incTemp, #decTemp {
   background-color: white;
+  border:hidden;
+
 }
 
-
+#temperature {
+  color: pink;
+  background-color: white;
+  inline-size: 5vw;
+  text-align: center;
+  
+}
