--- a/styles/index.css
+++ b/styles/index.css
@@ -1,19 +1,16 @@
 body {
     background-color: rgba(141, 187, 235, 0.742);
 }
-header, #weather_body, #change_temp, #change_sky, #change_city{
+#weather_body, #change_temp, #change_sky, #change_city{
     background-color: rgba(99, 165, 235, 0.81);
     color: white;
     font-family: 'Abril Fatface', cursive;
 }
 
 #city_name_header {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     margin: 50px 400px;
-    border-radius: 50px;
-    padding: 0px 15px;
-    font-size: smaller;
+    color: white;
 }
 
 #weather_body {
