--- a/styles/index.css
+++ b/styles/index.css
@@ -20,30 +20,40 @@ body {
     padding: 1.5%;
 }
 
+#widget_wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 20px;
+    margin: 20px;
+    gap: 10px;
+
+}
 #weather_body {
-    margin: 35px 175px;
     border-radius: 5px;
-    font-size: 5em;
+    font-size: 2.5em;
     text-align: center;
 }
 
 #weather_body div {
     padding: 50px 0px;
 }
+
 #change_widgets {
-    display: flex;
-    margin: 35px 250px;
-    justify-content: space-between;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
 }
 
 #change_temp, #change_sky {
     text-align: center;
     border-radius: 35px;
-    width: 350px;
-    padding: 1.5%;
+    width: 450px;
+    margin: auto;
+    /* padding: 1.5%; */
     
 }
 
+/* 
 #change_temp{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -65,10 +75,10 @@ body {
     display: block;
     align-self: end;
 }
-
+/*  */
 #sky_dropdown {
     width: 150px;
-}
+} 
 
 #reset {
     border-radius: 5px;
